--- a/index.html
+++ b/index.html
@@ -237,11 +237,11 @@
                     <div class="icon">
                         <i class="fas fa-paint-brush"></i>
                     </div>
-                    <h3 class="greet-heading blue-text">graduation</h3>
+                    <h3 class="greet-heading blue-text">Graduation</h3>
                     <p class="small-para">
                         Sagar Group of Institutions
                          Bhopal - MP (2020-2024)<br>
-                        Bachelor in Technology<br>
+                        Bachelor in Technology(Hons.)<br>
                          CGPA: 7.67 / 10 
                     </p>
                  </div>
